Started work on Main UI - Added RecyclerView for handling list items - Added list_item_recipe for individual recipes - Added RecipeAdapter for inflating list_item_recipe with data - RecipeListFragment utilizes CursorLoader to dynamically load data
Updated RecipeContract to allow favoriting of recipes

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,9 +11,10 @@
     tools:context="project.hnoct.kitchen.ui.RecipeListFragment"
     tools:showIn="@layout/activity_main">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recipe_recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        />
 
 </RelativeLayout>
