--- a/app/src/main/res/drawable/favorite_star_enabled.xml
+++ b/app/src/main/res/drawable/favorite_star_enabled.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <bitmap
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@android:drawable/star_off"
-    android:tint="@color/grey_300">
+    android:src="@drawable/btn_rating_star_off_normal_holo_light"
+    android:tint="@color/favorite_enabled">
 </bitmap>
