--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="favorite_enabled">@color/yellow_500</color>
     <color name="favorite_disabled">@color/grey_300</color>
 
+    <color name="direction_overlay_disabled">#009E9E9E</color>
+    <color name="direction_overlay_enabled">#7F9E9E9E</color>
+
     <!-- Generic Colors -->
     <color name="tertiary_grey_text">#808080</color>
     <color name="grey_300">#E0E0E0</color>
