--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,4 +51,8 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="bodyDarkText">
+        <item name="android:textColor">@color/primary_text_black</item>
+    </style>
+
 </resources>
