--- a/app/src/main/res/layout/pref_nutrient_dialog.xml
+++ b/app/src/main/res/layout/pref_nutrient_dialog.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="project.hnoct.kitchen.view"
     android:orientation="vertical"
     android:layout_width="@dimen/pref_dialog_nutrient_width"
     android:layout_height="wrap_content">
@@ -18,6 +19,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"/>
+
+    <project.hnoct.kitchen.view.MacroSelector
+        android:layout_gravity="center"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:fat="0.25f"/>
 
 
 
