--- a/app/src/main/res/layout/pref_nutrient_dialog.xml
+++ b/app/src/main/res/layout/pref_nutrient_dialog.xml
@@ -28,8 +28,7 @@
         android:paddingLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:fat="0.25f"/>
+        android:layout_height="150dp" />
 
 
 
