--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,4 +16,9 @@
     <item
         android:id="@+id/action_my_recipes"
         android:title="@string/my_recipes_title" />
+
+    <item
+        android:id="@+id/action_clear_data"
+        android:title="@string/action_clear_data"
+        android:orderInCategory="2"/>
 </menu>
