--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -45,4 +45,7 @@
 
     <!-- FAB -->
     <dimen name="fab_label_padding">4dp</dimen>
+
+    <!-- Add Ingredient List Item -->
+    <dimen name="list_add_ingredient_keyline">80dp</dimen>
 </resources>
